v2.6:
- Fixed a few errors when cloning Sims.

v2.5:
- Added INFANT age to CommonAge
- Updated CommonAgeUtils, CommonSimType, and CommonSimDemographics with the new INFANT age.

v2.4:
- The purchase picker dialog now sends values zipped up
- Updated the clone functions with better clone technology
- When an object is spawned via the spawn_object command, it now becomes the owner of the active Sim.
- Added some logging to the add career function.
- Added a check to prevent an error when checking if an object has game tags.

v2.3:
- Updated many of the `convert_to_vanilla` and `convert_from_vanilla` functions to be more reliable and not dependent on the values of the enums.
- Added `MARKETPLACE_FASHION_NAME` to CommonSimNameType
- The `CommonOutfitUtils.get_outfit_parts` and `CommonOutfitUtils.get_outfit_data` functions will no longer generate an outfit for a Sim if they do not have it. Instead empty data will be returned.
- Added a function to check if a trait is a ghost trait.
- Updated the `CommonObjectUtils` functions to be class methods
- `get_occult_sim_info` will now return the original `sim_info` as it specifies in the return type, instead of None.
- Added new utility `CommonRecipeUtils`
- Fixed an issue with the `CommonSimCraftingUtils` if a Recipe object was passed to it instead of an identifier.
- Added an optional callback to `CommonSimInventoryUtils.add_to_inventory` that will be invoked when an object is added to the inventory of a Sim.
- Added an Information Pie menu to S4CL that can be used by various mods (Comes with a phone variant as well!)
- Fixed an error that could occur when retrieving the object definition of objects that do not have a definition.
- Added more details to the exception that occurs when producing Whims. It now displays the id of the Whim so it can be found easier.
- When JSON files are being read and an exception occurs, more details are made available to indicate the name of the file failing to be read.